tests/declare_var/declare_var.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:2

Cannot cast `null` to `T` because null [1] is incompatible with number [2]. [incompatible-cast]

   test.js:4:2
   4| (null: T); // error: null ~> number
       ^^^^ [1]

References:
   test.js:4:8
   4| (null: T); // error: null ~> number
             ^ [2]



Found 1 error
